Feita comunicação do front com o back

--- a/front/src/app/pages/event/event.component.html
+++ b/front/src/app/pages/event/event.component.html
@@ -1,18 +1,26 @@
-<!-- Importe o CSS do Bootstrap -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 
-<!-- No template do seu componente -->
-<div class="container">
-  <div class="row">
-    <div class="col-md-4" *ngFor="let evento of eventos">
-      <div class="card mb-3">
-        <div class="card-body">
-          <h5 class="card-title">{{ evento.nome }}</h5>
-          <p class="card-text">{{ "Data de Inicio:" + evento.dataInicio }}</p>
-          <p class="card-text">{{ "Data de Fim:" + evento.dataFim }}</p>
-          <a class="btn btn-primary" [routerLink]="['/detalhes', evento.id]">Ver detalhes</a>
+
+<app-header></app-header>
+
+<div class="margin-header espacamento-base">
+  <div class="linha mb-3">
+    <h1>Eventos</h1>
+    <div class="spacer"></div>
+    <button class="btn btn-primary" style="margin-bottom: 0.5rem;" [routerLink]="['/eventAdd']">Adicionar Evento</button>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4" *ngFor="let evento of eventos">
+        <div class="card mb-3">
+          <div class="card-body">
+            <h5 class="card-title">{{ evento.nome }}</h5>
+            <p class="card-text">{{ "Data de Inicio:" + evento.dataInicio }}</p>
+            <p class="card-text">{{ "Data de Fim:" + evento.dataFim }}</p>
+            <a class="btn btn-primary" [routerLink]="['/main']">Acessar Evento</a>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
+
