--- a/front/src/app/pages/login/login.component.html
+++ b/front/src/app/pages/login/login.component.html
@@ -12,7 +12,7 @@
       <div class="esqueceu-senha">
         <a class="" href="/">Esqueceu a senha?</a>
       </div>
-      <button (click)="mainService.irParaMain()">Entrar</button>
+      <button (click)="eventService.irParaEvent()">Entrar</button>
       <div class="registar">
         <a class="" href="/">Registar-se</a>
       </div>
