--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -14,6 +14,17 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   flex: 1;
 }
 
+.margin-header {
+  margin-top: 72px;
+  height: 100%;
+  width: 100%;
+}
+
+.espacamento-base {
+  padding: 24px;
+}
+
+
 :host {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 16x;
