Finalizado login, melhorado layout

--- a/front/src/app/pages/login/login.component.scss
+++ b/front/src/app/pages/login/login.component.scss
@@ -93,9 +93,16 @@ input:focus {
 .registar {
   text-align: center;
   width: 100%;
+  color:#00A0C6;
 }
 
 .esqueceu-senha {
   text-align: start;
   width: 100%;
+  color:#00A0C6;
 }
+
+a:hover {
+  cursor:pointer;
+}
+
