--- a/front/src/app/pages/recover-password/recover-password.component.html
+++ b/front/src/app/pages/recover-password/recover-password.component.html
@@ -4,25 +4,25 @@
 
 <div>
   <app-header ></app-header>
-  <div class="card" id="div-recover-password">
-    <h1 class="titulo-login">Recuperação de senha</h1>
-    <div class="body-login">
+  <div class="card card-recover" *ngIf="divRecover">
+    <h1 class="titulo-card">Recuperação de senha</h1>
+    <div class="body-card">
       <div class="form-group" style="width: 100%;">
         <input type="email" class="form-control input-email" placeholder="E-mail:" [(ngModel)]="usuario.email">
       </div>
-      <button (click)="recoverPassword()">Enviar código</button>
+      <button class="btn btn-primary add-margin-top" (click)="recoverPassword()">Enviar código</button>
     </div>
   </div>
 
-  <div class="card" id="div-change-password" hidden>
-    <h1 class="titulo-login">Recuperação de senha</h1>
-    <div class="body-login">
+  <div class="card card-change" *ngIf="!divRecover">
+    <h1 class="titulo-card">Recuperação de senha</h1>
+    <div class="body-card">
       <div class="form-group" style="width: 100%;">
         <input type="text" class="form-control input-email" placeholder="Código recuperação:" [(ngModel)]="usuario.codigoRecuperacaoSenha">
         <input type="password" class="form-control input-email" placeholder="Nova senha:" [(ngModel)]="usuario.senha">
         <input type="password" class="form-control input-email" placeholder="Confirmar senha:" [(ngModel)]="confirmSenha">
       </div>
-      <button (click)="changePassword()">Enviar código</button>
+      <button class="btn btn-primary" (click)="changePassword()">Enviar código</button>
     </div>
   </div>
 
