--- a/front/src/app/pages/recover-password/recover-password.component.scss
+++ b/front/src/app/pages/recover-password/recover-password.component.scss
@@ -1,11 +1,11 @@
 @import "../../../styles.scss";
 
-.card {
+.card-recover {
   all: unset;
   border-radius: 4px;
   border: 1px solid #dadada;
   background-color: #fafafa;
-  height: 400px;
+  height: 340px;
   width: 400px;
   margin: auto;
   margin-top: 184px;
@@ -17,22 +17,36 @@
   transition: all 0.2s ease-in-out;
   line-height: 24px;
 }
+
+.card-change {
+  all: unset;
+  border-radius: 4px;
+  border: 1px solid #dadada;
+  background-color: #fafafa;
+  height: 450px;
+  width: 400px;
+  margin: auto;
+  margin-top: 184px;
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  transition: all 0.2s ease-in-out;
+  line-height: 24px;
+}
+
 button {
   border-radius: 8px;
   border-color: transparent;
-  background-color: #008000;
-  margin-bottom: 8%;
-  margin-top: 8%;
-  width: 100px;
+  margin-top: auto;
+  width: auto;
   color: #fff;
   height: 45px;
   font-size: 16px;
 }
 label {
   font-size: 20px;
-}
-h1{
-  padding-top: 2rem;
 }
 
 input {
@@ -75,13 +89,18 @@ input:focus {
   border-bottom: solid 2px #dadada;
 }
 
-.titulo-login {
+.titulo-card {
   color: #000000;
   width: 100%;
   text-align: center;
+  margin-top: 1.5rem;
 }
 
-.body-login {
+.add-margin-top {
+  margin-top: 1.5rem;
+}
+
+.body-card {
   width: 100%;
   padding: 10%;
   display: flex;
