--- a/front/src/app/pages/register/register.component.html
+++ b/front/src/app/pages/register/register.component.html
@@ -15,7 +15,7 @@
       <div class="form-group input-user">
         <input type="password" class="form-control" id="senha" placeholder="Senha:" [(ngModel)]="usuario.senha">
       </div>
-      <button (click)="saveUsuario()">Salvar</button>
+      <button class="btn btn-primary" (click)="saveUsuario()">Salvar</button>
     </div>
   </div>
 </div>
