--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -24,6 +24,23 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   padding: 24px;
 }
 
+.btn-primary:hover, .btn-primary:focus, .btn-primary.focus {
+  background-color: #008000;
+  color: #fff;
+  box-shadow: 0 8px 9px -4px rgba(59, 113, 202, 0.3), 0 4px 18px 0 rgba(59, 113, 202, 0.2);
+}
+
+.btn-primary:hover {
+  color: #fff;
+  background-color: #006100;
+  border-color: #006100;
+}
+
+.btn-primary {
+  background-color: #008000;
+  color: #fff;
+  box-shadow: 0 4px 9px -4px #008000;
+}
 
 :host {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
