--- a/front/src/app/pages/event/event.component.html
+++ b/front/src/app/pages/event/event.component.html
@@ -11,7 +11,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-4" *ngFor="let evento of eventos">
-        <div class="card mb-3">
+        <div class="card card-event mb-3">
           <div class="card-body">
             <h5 class="card-title">{{ evento.nome }}</h5>
             <p class="card-text">{{ "Data de Inicio:" + evento.dataInicio }}</p>
