--- a/front/src/app/pages/main/main.component.scss
+++ b/front/src/app/pages/main/main.component.scss
@@ -35,6 +35,16 @@
   border: none;
 }
 
+.botao-menu-selecionado {
+  background-color: #dadada;
+  width: 100%;
+  height: 40px;
+  font-size: 20px;
+  cursor: pointer;
+  pointer-events: painted;
+  border: none;
+}
+
 .botao-menu:focus {
   background-color: #dadada;
 }
