--- a/front/src/app/pages/login/login.component.html
+++ b/front/src/app/pages/login/login.component.html
@@ -3,7 +3,7 @@
 </head>
 
 <div>
-  <app-header ></app-header>
+  <app-header [login]="true" ></app-header>
   <div class="card">
     <h1 class="titulo-login">Login</h1>
     <div class="body-login">
