Spinner ao recuperar senha

--- a/front/src/app/pages/recover-password/recover-password.component.html
+++ b/front/src/app/pages/recover-password/recover-password.component.html
@@ -10,7 +10,10 @@
       <div class="form-group" style="width: 100%;">
         <input type="email" class="form-control input-email" placeholder="E-mail:" [(ngModel)]="usuario.email">
       </div>
-      <button class="btn btn-primary add-margin-top" (click)="recoverPassword()">Enviar código</button>
+      <button class="btn btn-primary add-margin-top" (click)="recoverPassword()">
+        <span *ngIf="loading" class="spinner-border spinner-border-sm"></span>
+        Enviar código
+      </button>
     </div>
   </div>
 
@@ -22,7 +25,10 @@
         <input type="password" class="form-control input-email" placeholder="Nova senha:" [(ngModel)]="usuario.senha">
         <input type="password" class="form-control input-email" placeholder="Confirmar senha:" [(ngModel)]="confirmSenha">
       </div>
-      <button class="btn btn-primary" (click)="changePassword()">Enviar código</button>
+      <button class="btn btn-primary" (click)="changePassword()">
+        <span *ngIf="loading" class="spinner-border spinner-border-sm"></span>
+        Enviar código
+      </button>
     </div>
   </div>
 
