Começado desenvolvimento da definição dos avaliadores para um evento

--- a/front/src/app/pages/main/main.component.html
+++ b/front/src/app/pages/main/main.component.html
@@ -22,13 +22,8 @@
   </div>
 
   <div class="coluna todas-telas">
-    <ul>
-      <li>
-        item 1
-      </li>
-      <li>
-        item 2
-      </li>
-    </ul>
+    <app-evaluator *ngIf="this.selectedButton == 'Avaliadores'">
+
+    </app-evaluator>
   </div>
 </div>
