--- a/front/src/app/pages/evaluator-add/evaluator-add.component.html
+++ b/front/src/app/pages/evaluator-add/evaluator-add.component.html
@@ -6,7 +6,7 @@
       <h1 class="card-title">Adicionar Avaliador</h1>
       <div class="form-group mb-3">
         <label for="email">Email do avaliador:</label>
-        <input type="text" class="form-control" id="email" [(ngModel)]="sendObj.email">
+        <input type="email" class="form-control" id="email" [(ngModel)]="sendObj.email">
       </div>
       <div class="div-button">
         <button (click)="addEvaluator()" class="btn btn-primary">Salvar</button>
