--- a/front/src/app/pages/evaluator/evaluator.component.html
+++ b/front/src/app/pages/evaluator/evaluator.component.html
@@ -1,7 +1,7 @@
 <div class="linha mb-3">
   <h1>Avaliadores</h1>
   <div class="spacer"></div>
-  <button class="btn btn-primary" style="margin-bottom: 0.5rem;" [routerLink]="['/eventAdd']">Adicionar Avaliador</button>
+  <button class="btn btn-primary" style="margin-bottom: 0.5rem;" [routerLink]="['/evaluatorAdd']">Adicionar Avaliador</button>
 </div>
 <div class="container">
   <div class="row">
