--- a/front/src/app/pages/evaluator/evaluator.component.html
+++ b/front/src/app/pages/evaluator/evaluator.component.html
@@ -7,8 +7,10 @@
   <div class="row">
     <div class="col-md-4" *ngFor="let userPermission of userPermissions">
       <div class="card card-event mb-3">
-        <div class="card-body">
+        <div class="card-body linha">
           <h5 class="card-title">{{ userPermission.usuarioDTO?.nome }}</h5>
+          <div class="spacer"></div>
+          <button class="btn" (click)="deleteUserPermission(userPermission.id!)"><i class="fa fa-trash"></i></button>
         </div>
       </div>
     </div>
