--- a/front/src/app/pages/recover-password/recover-password.component.html
+++ b/front/src/app/pages/recover-password/recover-password.component.html
@@ -10,10 +10,15 @@
       <div class="form-group" style="width: 100%;">
         <input type="email" class="form-control input-email" placeholder="E-mail:" [(ngModel)]="usuario.email">
       </div>
-      <button class="btn btn-primary add-margin-top" (click)="recoverPassword()">
-        <span *ngIf="loading" class="spinner-border spinner-border-sm"></span>
-        Enviar código
-      </button>
+      <div class="linha">
+        <button class="btn btn-secondary" style="margin-right: 2rem;" (click)="this.mainService.returnPreviousPage()">
+          Cancelar
+        </button>
+        <button class="btn btn-primary add-margin-top" (click)="recoverPassword()">
+          <span *ngIf="loading" class="spinner-border spinner-border-sm"></span>
+          Enviar código
+        </button>
+      </div>
     </div>
   </div>
 
@@ -25,10 +30,15 @@
         <input type="password" class="form-control input-email" placeholder="Nova senha:" [(ngModel)]="usuario.senha">
         <input type="password" class="form-control input-email" placeholder="Confirmar senha:" [(ngModel)]="confirmSenha">
       </div>
-      <button class="btn btn-primary" (click)="changePassword()">
-        <span *ngIf="loading" class="spinner-border spinner-border-sm"></span>
-        Enviar código
-      </button>
+      <div class="linha">
+        <button class="btn btn-secondary" style="margin-right: 2rem;" (click)="this.mainService.returnPreviousPage()">
+          Cancelar
+        </button>
+        <button class="btn btn-primary" (click)="changePassword()">
+          <span *ngIf="loading" class="spinner-border spinner-border-sm"></span>
+          Enviar código
+        </button>
+      </div>
     </div>
   </div>
 
