Melhorada tela main e adicionado menu para voltar para tela de eventos

--- a/front/src/app/components/header/header.component.html
+++ b/front/src/app/components/header/header.component.html
@@ -9,6 +9,11 @@
   </div>
 
   <div class="spacer"></div>
+
+  <p-tabMenu *ngIf="!login" [model]="items" [activeItem]="activeItem">
+  </p-tabMenu>
+
+  <div class="spacer"></div>
   <a *ngIf="login" class="login" (click)="this.verifyUserAlreadyLogged()" >Login</a>
   <a *ngIf="!login" class="login" (click)="this.logout()">Sair</a>
 </div>
