--- a/front/src/app/pages/main/main.component.html
+++ b/front/src/app/pages/main/main.component.html
@@ -24,22 +24,22 @@
   <div class="coluna todas-telas">
     <div *ngIf="this.selectedButton == 'Nenhum'">
       <h1 class="titulo-centralizado">Bem vindo a página do evento <div class="nome-evento"> {{this.permissaoUsuarioService.userPermissionEvent[0].eventoDTO?.nome}}</div></h1>
-      <div class="titulo-centralizado" *ngFor="let permissaoUsuarioEvento of this.permissaoUsuarioService.userPermissionEvent">
+      <div class="botoes-centralizado" *ngFor="let permissaoUsuarioEvento of this.permissaoUsuarioService.userPermissionEvent">
         <div *ngIf="permissaoUsuarioEvento.permissaoDTO!.descricao == 'Organizador'">
-          <button class="btn btn-primary margin-botoes" id="avaliadores" (click)="abrirAvaliadores()">
+          <button class="btn btn-primary margin-botoes tamanho-botoes" id="avaliadores" (click)="abrirAvaliadores()">
             Avaliadores
           </button>
-          <button class="btn btn-primary margin-botoes" id="submissoes" (click)="abrirSubmissoes()">
+          <button class="btn btn-primary margin-botoes tamanho-botoes" id="submissoes" (click)="abrirSubmissoes()">
             Submissões
           </button>
         </div>
         <div *ngIf="permissaoUsuarioEvento.permissaoDTO!.descricao == 'Avaliador'">
-          <button class="btn btn-primary margin-botoes" id="avaliar-trabalhos" (click)="abrirAvaliarTrabalhos()">
+          <button class="btn btn-primary margin-botoes tamanho-botoes" id="avaliar-trabalhos" (click)="abrirAvaliarTrabalhos()">
             Avaliar trabalhos
           </button>
         </div>
         <div *ngIf="permissaoUsuarioEvento.permissaoDTO!.descricao == 'Autor'">
-          <button class="btn btn-primary margin-botoes" id="trabalhos" (click)="abrirSeusTrabalhos()">
+          <button class="btn btn-primary margin-botoes tamanho-botoes" id="trabalhos" (click)="abrirSeusTrabalhos()">
             Seus trabalhos
           </button>
         </div>
