--- a/front/src/app/pages/evaluator-add/evaluator-add.component.html
+++ b/front/src/app/pages/evaluator-add/evaluator-add.component.html
@@ -14,7 +14,7 @@
         </button>
         <button (click)="addEvaluator()" class="btn btn-primary">
           <span *ngIf="loading" class="spinner-border spinner-border-sm"></span>
-          Salvar
+          Adicionar
         </button>
       </div>
 
