--- a/front/src/app/pages/recover-password/recover-password.component.html
+++ b/front/src/app/pages/recover-password/recover-password.component.html
@@ -3,7 +3,7 @@
 </head>
 
 <div>
-  <app-header ></app-header>
+  <app-header [login]="true"></app-header>
   <div class="card card-recover" *ngIf="divRecover">
     <h1 class="titulo-card">Recuperação de senha</h1>
     <div class="body-card">
