--- a/front/src/app/pages/finalize-registration/finalize-registration.component.html
+++ b/front/src/app/pages/finalize-registration/finalize-registration.component.html
@@ -1,4 +1,4 @@
-<app-header ></app-header>
+<app-header [login]="true"></app-header>
 <div class="margin-header">
   <div class="card">
     <h1 class="titulo-user">Cadastro de Usuário</h1>
