Feito envio de e-mail para cadastro de avaliador

--- a/front/src/app/pages/finalize-registration/finalize-registration.component.html
+++ b/front/src/app/pages/finalize-registration/finalize-registration.component.html
@@ -1,7 +1,7 @@
 <app-header [login]="true"></app-header>
 <div class="margin-header">
   <div class="card">
-    <h1 class="titulo-user">Cadastro de Usuário</h1>
+    <h1 class="titulo-user">Finalizar Cadastro</h1>
     <div class="body-user">
       <div class="form-group input-user">
         <input type="text" class="form-control" id="nome"  placeholder="Nome:" [(ngModel)]="usuario.nome">
