Feita implementação do envio de trabalho

--- a/front/src/app/pages/my-works/my-works.component.html
+++ b/front/src/app/pages/my-works/my-works.component.html
@@ -10,7 +10,7 @@
       <div class="card card-event mb-3">
         <div class="card-body">
           <h5 class="card-title">{{ trabalho.titulo }}</h5>
-          <p class="card-text">{{ "Categoria:" + trabalho.categoriaDTO }}</p>
+          <p class="card-text">{{ "Categoria:" + trabalho.categoriaDTO?.descricao }}</p>
         </div>
       </div>
     </div>
